--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/CSGO.jpg" class="d-block w-100" alt="CSGO_WALPAPER">
+                <img src="img/CSGO.png" class="d-block w-100" alt="CSGO_WALPAPER">
             </div>
             <div class="carousel-item">
-                <img src="img/GTA_V.jpg" class="d-block w-100" alt="GTA_V_WALPAPER">
+                <img src="img/GTA_V.png" class="d-block w-100" alt="GTA_V_WALPAPER">
             </div>
             <div class="carousel-item">
-                <img src="img/PUBG.jpg" class="d-block w-100" alt="PUBG_WALPAPER">
+                <img src="img/PUBG.png" class="d-block w-100" alt="PUBG_WALPAPER">
             </div>
         </div>
     </div>
