--- a/index.html
+++ b/index.html
@@ -47,6 +47,36 @@
             </div>
         </div>
     </div>
+    <div class="row">
+      <div style="height: 16rem;" class="col-md-3">
+        <div class="card" style="width: 16rem;">
+        <img src="img/col-md-6/Pubg_Col_md_6.jpg" class="card-img-top">
+          <div class="card-body">
+          <h5 class="card-title">PUBG</h5>
+          <p class="card-text">PUBG is the best game in the batle royale in the world.</p>
+          <a href="#" class="btn btn-primary">More information</a>
+          </div>
+        </div>
+        <div class="card" style="width:16rem">
+        <img src="img/col-md-6/GTA_V_col_md_6.jpg" class="card-img-top">
+          <div class="card-body">
+          <h5 class="card-title">GTA V</h5>
+          <p class="card-text">The most realistic game in the world</p>
+          <a href="#" class="btn btn-primary">More information</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-9">
+        <div class="card">
+          <img src="img/col-md-6/CS_GO_Col_md_6.jpeg" class="card-img-top">
+          <div class="card-body">
+            <h5 class="card-title">CS GO</h5>
+            <p class="card-text">CS GO the one of the best shooting games, but in this game you can meet a lot of cheaters</p>
+            <a href="#" class="btn btn-primary">More information</a>
+          </div>
+        </div>
+      </div>
+    </div>
     <h1>Sanya sotku verni</h1>
 </body>
 
